Easy Off Button

--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -16,7 +16,7 @@
         const enableScouting = '{{scouting}}' === 'true';
         const scoutingUrl = '{{{scouting_url}}}';
         const scoutMaxCount = parseInt('{{scouting_count}}' || 15);
-
+        const flatShinyRate = '{{{flat_shiny_rate}}}';
         const maxPokemonId = '{{pokemon_count}}'; // Bandaid
 
         const defaultShowPokemon = '{{default_show_pokemon}}' === 'true';
